--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,14 +4,10 @@ on:
 # If specified, the workflow will be triggered automatically once you push to the `main` branch.
 # Replace `main` with your branch’s name
 push:
-branches: ["master"]
+branches: ["main"]
+
 # Specify to run a workflow manually from the Actions tab on GitHub
 workflow_dispatch:
-
-# Gives the workflow permissions to clone the repo and create a page deployment
-permissions:
-id-token: write
-pages: write
 
 env:
 # Name of module and id separated by a slash
@@ -27,7 +23,6 @@ ALGOLIA_ARTIFACT: algolia-indexes-ID1.zip
 jobs:
 build:
 runs-on: ubuntu-latest
-
 steps:
   - name: Checkout repository
 uses: actions/checkout@v3
@@ -74,31 +69,3 @@ path: artifacts
 uses: JetBrains/writerside-checker-action@v1
 with:
 instance: ${{ env.INSTANCE }}
-
-deploy:
-environment:
-name: github-pages
-url: ${{ steps.deployment.outputs.page_url }}
-# Requires the build job results
-needs: test
-runs-on: ubuntu-latest
-steps:
-  - name: Download artifact
-uses: actions/download-artifact@v3
-with:
-name: docs
-
-  - name: Unzip artifact
-run: unzip -O UTF-8 -qq ${{ env.ARTIFACT }} -d dir
-
-  - name: Setup Pages
-uses: actions/configure-pages@v2
-
-  - name: Upload artifact
-uses: actions/upload-pages-artifact@v1
-with:
-path: dir
-
-  - name: Deploy to GitHub Pages
-id: deployment
-uses: actions/deploy-pages@v1
