--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,71 +1,62 @@
 name: Build documentation
 
 on:
-# If specified, the workflow will be triggered automatically once you push to the `main` branch.
-# Replace `main` with your branch’s name
-push:
-branches: ["main"]
-
-# Specify to run a workflow manually from the Actions tab on GitHub
-workflow_dispatch:
+  push:
+    branches: ["main"]
+  workflow\_dispatch:
 
 env:
-# Name of module and id separated by a slash
-INSTANCE: ChatPython/id1
-# Replace HI with the ID of the instance in capital letters
-ARTIFACT: webHelpID12-all.zip
-# Writerside docker image version
-DOCKER_VERSION: 233.14272
-# Add the variable below to upload Algolia indexes
-# Replace HI with the ID of the instance in capital letters
-ALGOLIA_ARTIFACT: algolia-indexes-ID1.zip
+  INSTANCE: ChatPython/id1
+  ARTIFACT: webHelpID12-all.zip
+  DOCKER\_VERSION: 233.14272
+  ALGOLIA\_ARTIFACT: algolia-indexes-ID1.zip
 
 jobs:
-build:
-runs-on: ubuntu-latest
-steps:
-  - name: Checkout repository
-uses: actions/checkout@v3
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  - name: Build Writerside docs using Docker
-uses: JetBrains/writerside-github-action@v4
-with:
-instance: ${{ env.INSTANCE }}
-artifact: ${{ env.ARTIFACT }}
-docker-version: ${{ env.DOCKER_VERSION }}
+      - name: Build Writerside docs using Docker
+        uses: JetBrains/writerside-github-action@v4
+        with:
+          instance: ${{ env.INSTANCE }}
+          artifact: ${{ env.ARTIFACT }}
+          docker-version: ${{ env.DOCKER\_VERSION }}
 
-  - name: Upload documentation
-uses: actions/upload-artifact@v3
-with:
-name: docs
-path: |
-  artifacts/${{ env.ARTIFACT }}
-  artifacts/report.json
-retention-days: 7
-  
-  # Add the step below to upload Algolia indexes
-  - name: Upload algolia-indexes
-uses: actions/upload-artifact@v3
-with:
-name: algolia-indexes
-path: artifacts/${{ env.ALGOLIA_ARTIFACT }}
-retention-days: 7
+      - name: Upload documentation
+        uses: actions/upload-artifact@v3
+        with:
+          name: docs
+          path: |
+            artifacts/${{ env.ARTIFACT }}
+            artifacts/report.json
+          retention-days: 7
 
-# Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the
-  build when documentation contains errors
-test:
-# Requires build job results
-needs: build
-runs-on: ubuntu-latest
+      # Add the step below to upload Algolia indexes
+      - name: Upload algolia-indexes
+        uses: actions/upload-artifact@v3
+        with:
+          name: algolia-indexes
+          path: artifacts/${{ env.ALGOLIA\_ARTIFACT }}
+          retention-days: 7
 
-steps:
-  - name: Download artifacts
-uses: actions/download-artifact@v1
-with:
-name: docs
-path: artifacts
+  # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the
+  # build when documentation contains errors
+  test:
+    # Requires build job results
+    needs: build
+    runs-on: ubuntu-latest
 
-  - name: Test documentation
-uses: JetBrains/writerside-checker-action@v1
-with:
-instance: ${{ env.INSTANCE }}
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v1
+        with:
+          name: docs
+          path: artifacts
+
+      - name: Test documentation
+        uses: JetBrains/writerside-checker-action@v1
+        with:
+          instance: ${{ env.INSTANCE }}
