--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build documentation
 on:
   push:
     branches: ["main"]
-  workflow_dispatch:
+  workflow\_dispatch:
 
 env:
   INSTANCE: ChatPython/id1
